--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Raghad Progs!</title>
+	<title>Raghad Info!</title>
 	<style>
 		body {
 			background-color: #f7f7f7;
@@ -40,8 +40,8 @@
 	</style>
 </head>
 <body>
-	<h1>Raghad Progs!</h1>
-	<button onclick="getJoke()">Get Joke</button>
+	<h1>Raghad Info!</h1>
+	<button onclick="getInfo()">Get Info</button>
 	<div class="info" id="info"></div>
 	
 	<script>
