--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RaghadQuranTest</title>
+	<title>RaghadTriviaTest</title>
 	<style>
 		body {
 			background-color: #f7f7f7;
@@ -30,27 +30,37 @@
 		button:hover {
 			background-color: #2550a7;
 		}
-		.verse {
+		.question {
 			font-size: 2em;
 			text-align: center;
 			margin-top: 50px;
 			margin-bottom: 50px;
 			color: #333;
 		}
+		.answer {
+			font-size: 1.2em;
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			color: #1c478e;
+		}
 	</style>
 </head>
 <body>
-	<h1>RaghadQuranTest</h1>
-	<button onclick="getVerse()">Get Verse</button>
-	<div class="verse" id="verse"></div>
+	<h1>RaghadTriviaTest</h1>
+	<button onclick="getQuestion()">Get Question</button>
+	<div class="question" id="question"></div>
+	<div class="answer" id="answer"></div>
 	
 	<script>
-		function getVerse() {
-			fetch('https://api.alquran.cloud/ayah/random')
+		function getQuestion() {
+			fetch('https://opentdb.com/api.php?amount=1&type=multiple')
 				.then(response => response.json())
 				.then(data => {
-					const verse = `${data.data.surah.englishName} ${data.data.surah.number}:${data.data.numberInSurah} - ${data.data.text}`;
-					document.getElementById('verse').innerHTML = verse;
+					const question = `${data.results[0].question}`;
+					const correctAnswer = `${data.results[0].correct_answer}`;
+					document.getElementById('question').innerHTML = question;
+					document.getElementById('answer').innerHTML = `Answer: ${correctAnswer}`;
 				});
 		}
 	</script>
