--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
 	<div class="choices" id="choices"></div>
 	<div class="answer hidden" id="answer"></div>
 	<div class="correct-message hidden" id="correct-message">Correct!</div>
-	<img class="firework" src="https://i.imgur.com/KG3k1Bu.png">
+	<div class="fireworks">
+		<img class="firework" src="https://www.transparentpng.com/thumb/firework/TQL7wQ-firework-vector.png">
+		<img class="firework" src="https://www.transparentpng.com/thumb/firework/VWvDbv-cartoon-explosion-firework-clipart-transparent.png">
+		<img class="firework" src="https://www.transparentpng.com/thumb/firework/0wB5c5-colorful-fireworks-png.png">
+	</div>
 	<script>
 		const API_URL = 'https://opentdb.com/api.php?amount=1&type=multiple';
 		let correctAnswer;
