--- a/index.html
+++ b/index.html
@@ -53,48 +53,106 @@
   </style>
 </head>
 <body>
-  <h1>Raghad Quiz</h1>
+  <h1>RaghadQuizTest</h1>
   <p id="question"></p>
-  <div id="choices">
-    <button id="choiceA"></button>
-    <button id="choiceB"></button>
-    <button id="choiceC"></button>
-    <button id="choiceD"></button>
+  <form id="quiz-form">
+    <ul id="choices"></ul>
+    <button type="submit">Submit</button>
+  </form>
+  <div id="score">
+    Score: <span id="score-value">0</span>
   </div>
-  <p id="score">Score: 0</p>
-  <script>
-    let score = 0;
-    const question = document.getElementById("question");
-    const choices = Array.from(document.querySelectorAll("#choices button"));
-    const scoreDisplay = document.getElementById("score");
-function getQuestion() {
-  fetch("https://opentdb.com/api.php?amount=1")
-    .then((res) => res.json())
-    .then((data) => {
-      const questionData = data.results[0];
-      question.innerText = questionData.question;
-      const choicesData = questionData.incorrect_answers.concat(questionData.correct_answer);
-      choicesData.sort(() => Math.random() - 0.5);
-      choices.forEach((choice, index) => {
-        choice.innerText = choicesData[index];
-        choice.onclick = () => {
-          if (choice.innerText === questionData.correct_answer) {
-            choice.style.backgroundColor = "green";
-            score++;
-          } else {
-            choice.style.backgroundColor = "red";
-            choices.find((c) => c.innerText === questionData.correct_answer).style.backgroundColor =
-              "green";
-          }
-          scoreDisplay.innerText = `Score: ${score}`;
-          choices.forEach((c) => (c.disabled = true));
-        };
-      });
-    })
-    .catch((err) => console.error(err));
-}
 
-getQuestion();
+  <script>
+    const apiUrl = "https://opentdb.com/api.php?amount=1";
+
+    const questionElem = document.getElementById("question");
+    const choicesElem = document.getElementById("choices");
+    const formElem = document.getElementById("quiz-form");
+    const scoreElem = document.getElementById("score-value");
+
+    let currentScore = 0;
+
+    // Fetch the first question when the page loads
+    fetchQuestion();
+
+    // Submit the form when the user selects an answer
+    formElem.addEventListener("submit", function (event) {
+      event.preventDefault();
+      const selectedChoice = formElem.elements["choice"].value;
+      const correctChoice = formElem.correctChoice.value;
+      if (selectedChoice === correctChoice) {
+        currentScore++;
+        event.target.choice.forEach(function (elem) {
+          if (elem.value === selectedChoice) {
+            elem.parentNode.style.color = "green";
+          }
+          elem.disabled = true;
+        });
+      } else {
+        event.target.choice.forEach(function (elem) {
+          if (elem.value === selectedChoice) {
+            elem.parentNode.style.color = "red";
+          }
+          if (elem.value === correctChoice) {
+            elem.parentNode.style.color = "green";
+          }
+          elem.disabled = true;
+        });
+      }
+      scoreElem.innerText = currentScore;
+      formElem.submit.disabled = true;
+      formElem.choice.disabled = true;
+      formElem.nextQuestion.disabled = false;
+    });
+
+    // Fetch a new question when the user clicks the "Next Question" button
+    formElem.nextQuestion.addEventListener("click", function (event) {
+      event.preventDefault();
+      formElem.nextQuestion.disabled = true;
+      formElem.submit.disabled = false;
+      formElem.choice.disabled = false;
+      formElem.choice.forEach(function (elem) {
+        elem.checked = false;
+        elem.parentNode.style.color = "initial";
+        elem.disabled = false;
+      });
+      fetchQuestion();
+    });
+
+    // Fetch a question from the API and populate the form with the choices
+    function fetchQuestion() {
+      fetch(apiUrl)
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (data) {
+          const questionData = data.results[0];
+          questionElem.innerText = questionData.question;
+          const choices = questionData.incorrect_answers.concat(
+            questionData.correct_answer
+          );
+          shuffle(choices);
+          choicesElem.innerHTML = choices
+            .map(
+              (choice) =>
+                `<li><label><input type="radio" name="choice" value="${choice}">${choice}</label></li>`
+            )
+            .join("");
+          formElem.correctChoice.value = questionData.correct_answer;
+        })
+        .catch(function (error) {
+          console.error("Error fetching question:", error);
+        });
+    }
+
+    // Shuffle the elements in an array
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
+    }
   </script>
 </body>
-</html>
